# SkupinskoVedenje_skupinaD

./: README.md  README_DEV.md  pyproject.toml  pyrightconfig.json
notebooks/: fish_model_ext.ipynb  fish_model_original copy.ipynb  fish_model_original.ipynb  fish_model_original_interactive.ipynb  fish_model_original_n_groups.ipynb  main.ipynb  test.ipynb
report/: bibliography.bib  discussion.tex  introduction.tex  main.bib  main.tex  methods.tex  related_work.tex  results.tex
results/original/gamma/: statistics.npy
results/original/gamma/k=1/: att.npy  statistics.npy
results/original/gamma/k=2/: ali.npy  att.npy  statistics.npy
src/: constants.py  main.py  simulation.py  visualization.py
src/cb25d/: batch.py  cloudpickled_value.py  compare_gamma_original.py  interactive.py  notebook.py  render_environment.py  simulation_framework.py  simulation_impl_ext.py  simulation_impl_original.py  simulation_impl_sinewave.py  track_n_groups.py
