[project]
name = "cb25d"
version = "0.1.0"
requires-python = "==3.13.9"
dependencies = [
    "cloudpickle>=3.1.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.7",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "pygame-ce>=2.5.6",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.pyright]
typeCheckingMode = "basic"
